--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Task Management System" />
-    <title>Task Management System</title>
+    <meta name="description" content="TriDo - Task Management System" />
+    <title>TriDo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
