Rebrand to Enginia-do: Update app name, database, and deployment docs for new client

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6366f1" />
-    <meta name="description" content="TriDo - Task Management System with Push Notifications" />
+    <meta name="description" content="Enginia-do - Task Management System with Push Notifications" />
     
     <!-- Prevent caching for PWA updates -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
