--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,9 +18,9 @@
     <!-- PWA Configuration -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="TriDo">
+    <meta name="apple-mobile-web-app-title" content="Enginia-do">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="TriDo">
+    <meta name="application-name" content="Enginia-do">
     
     <!-- Apple Touch Icons with rounded corners -->
     <link rel="apple-touch-icon" sizes="180x180" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='22' fill='%236366f1'/%3E%3Cpath d='M25 50L40 65L75 30' stroke='white' stroke-width='8' fill='none' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E">
@@ -36,7 +36,7 @@
     <meta name="msapplication-TileColor" content="#6366f1">
     <meta name="msapplication-TileImage" content="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%236366f1'/%3E%3Cpath d='M25 50L40 65L75 30' stroke='white' stroke-width='8' fill='none' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E">
     
-    <title>TriDo - Task Manager</title>
+    <title>Enginia-do - Task Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
